syntax = "proto3";
package headscale.v1;
option  go_package = "github.com/juanfont/headscale/gen/go/v1";

message ACLPingPongRequest {
    string ping_msg = 1;
}

message ACLPingPongResponse {
    string pong_msg = 1;
}
